Add content to chicken ziti recipe

--- a/recipes/chicken-ziti.html
+++ b/recipes/chicken-ziti.html
@@ -6,6 +6,38 @@
     <title>Chicken and Broccoli Baked Ziti</title>
 </head>
 <body>
-    
+    <h1>Chicken and Broccoli Baked Ziti</h1>
+    <img src="chicken-ziti.webp" alt="Chicken and Broccoli Baked Ziti" height="310">
+    <h2>Description</h2>
+    <p>Serves 6-8 people</p>
+    <p>1 hour prep time + 25 minute cook time</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>2 Chicken Boneless Skinless Chicken Breasts (1-1+1/2 lbs.)</li>
+        <li>Salt & Pepper</li>
+        <li>1 Tbsp Oil</li>
+        <li>1 Tbsp Butter</li>
+        <li>16 oz. Ziti Pasta</li>
+        <li>4 Tbsp Butter</li>
+        <li>2 Cloves Garlic, minced</li>
+        <li>4 Cups Broccoli, finely chopped</li>
+        <li>1/4 Cup Flour</li>
+        <li>4 Cups 2% Milk</li>
+        <li>1+1/2 tsp Kosher Salt</li>
+        <li>1/2 tsp Pepper</li>
+        <li>1/2 Cup Grated Parmesan Cheese</li>
+        <li>1+1/2 Cups Grated Mozzarella</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Preheat your oven to 375F and bring a large pot of salted water to a boil for the pasta</li>
+        <li>Pound the chicken breasts until they are ~1/2” thick; season with salt and pepper on both sides</li>
+        <li>Preheat a large skillet over medium heat and melt 1 Tbsp of butter with 1 Tbsp olive oil; place the chicken on the skillet and cook until golden brown on both sides and internal temperature reaches 165°F (5-6 mins per side) then remove from the pan; let rest for 5 mins then slice into bite size cubes</li>
+        <li>Boil pasta until al dente (1-2 mins less than package directions) then drain and set aside</li>
+        <li>In a large pot over medium heat, sauté the garlic in 4 Tbsp butter for 1 min, then add the broccoli and sauté for 2-3 more mins until veggies are heated through and tender</li>
+        <li>Stir in the flour and then add the milk 3/4 cups at a time, stirring to incorporate before adding more; once all the milk is added, turn the heat up to medium high until the mixture bubbles and thickens slightly then turn the heat back down to medium and add the parmesan, salt, pepper</li>
+        <li>Turn off the heat and stir in the pasta and chicken, then transfer into a greased 9”x13” baking dish (or individual bakers) and top with mozzarella and parmesan</li>
+        <li>Bake uncovered for 20-25 mins until the top is deep golden brown in spots and enjoy!</li>
+    </ol>
 </body>
 </html>
