--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="recipes/chicken-ziti.html">Chicken and Broccoli Baked Ziti</a></li>
+            <li><a href="recipes/grilled-cheese.html">Grilled Cheese Sandwich</a></li>
+            <li><a href="recipes/chocolate-chip-cookies.html">Chocolate Chip Cookies</a></li>
+        </ul>
     </body>
 </html>
