add image to landing page

--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="recipes/chicken-ziti.html">Chicken and Broccoli Baked Ziti</a></li>
-            <li><a href="recipes/grilled-cheese.html">Grilled Cheese Sandwich</a></li>
-            <li><a href="recipes/chocolate-chip-cookies.html">Chocolate Chip Cookies</a></li>
-        </ul>
+        <div class="top">
+            <img src="cooking-background.webp" alt="image of chef" style="width: 500px">
+            <div class="title">Odin Recipes</div>
+        </div>
+        
+        <div class="links">
+            <a class="left" href="recipes/chicken-ziti.html">Chicken and Broccoli Baked Ziti</a>
+            <a class="centered" href="recipes/grilled-cheese.html">Grilled Cheese Sandwich</a>
+            <a class="right" href="recipes/chocolate-chip-cookies.html">Chocolate Chip Cookies</a>
+        </div>
+        
     </body>
 </html>
