--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     </head>
     <body>
         <div class="top">
+            <h1 class="title">Odin Recipes</h1>
             <img src="cooking-background.webp" alt="image of chef" style="width: 500px">
-            <div class="title">Odin Recipes</div>
         </div>
         
         <div class="links">
-            <a class="left" href="recipes/chicken-ziti.html">Chicken and Broccoli Baked Ziti</a>
-            <a class="centered" href="recipes/grilled-cheese.html">Grilled Cheese Sandwich</a>
-            <a class="right" href="recipes/chocolate-chip-cookies.html">Chocolate Chip Cookies</a>
+            <a href="recipes/chicken-ziti.html">Chicken and Broccoli Baked Ziti</a>
+            <a href="recipes/grilled-cheese.html">Grilled Cheese Sandwich</a>
+            <a href="recipes/chocolate-chip-cookies.html">Chocolate Chip Cookies</a>
         </div>
         
     </body>
